Add named arguments

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -361,10 +361,33 @@ include::./examples/initialize.cr[tag=file]
 
 異なる引数の数、型制限で同名のメソッドを定義した場合、実行時に適切な型のものが選択されて呼び出されます。
 
+また、メソッド呼び出しの引数の前に、引数名と `:` を置くと、名前付き引数となります。
+この場合、その引数は順序に関係なくその名前の引数としてメソッドに渡されます。
+
 [source,crystal]
 ----
 include::./examples/default.cr[tag=file]
 ----
+
+==== 可変長引数・ブロック
+
+引数名の前に `*` を置いた場合、そのメソッドは可変長の引数を取ります。
+`**` を置いた場合は、名前付き引数の可変長引数です。
+
+`&` はブロックを受け取ります。このブロックは `Proc` 型です。
+
+メソッドの中で `yield` を使うと、ブロックを呼び出すことができます。
+このとき、引数を渡すこともできます。
+
+メソッド呼び出しのあとに、`do` か `{` を置くと、そこから `end`、`}` までがブロックとしてメソッドに渡されます。
+
+メソッド呼び出しの引数の前に `*` を置くと、可変長引数のスプラット展開となります。
+この値の型は `Tuple` でなければいけません。
+
+`**` を置くと名前付き引数のスプラット展開となります。
+この値の型は `NamedTuple` でなければいけません。
+
+`&` は Ruby 同様ブロック引数を渡すのにも使えますが、ブロックの第一引数としてメソッドチェインの開始点としても使えます。
 
 ==== `alias`
 
