--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -361,7 +361,7 @@ include::./examples/initialize.cr[tag=file]
 
 異なる引数の数、型制限で同名のメソッドを定義した場合、実行時に適切な型のものが選択されて呼び出されます。
 
-また、メソッド呼び出しの引数の前に、引数名と `:` を置くと、名前付き引数となります。
+また引数の前に、引数名と `:` を置くと、名前付き引数となります。
 この場合、その引数は順序に関係なくその名前の引数としてメソッドに渡されます。
 
 [source,crystal]
@@ -381,7 +381,7 @@ include::./examples/default.cr[tag=file]
 
 メソッド呼び出しのあとに、`do` か `{` を置くと、そこから `end`、`}` までがブロックとしてメソッドに渡されます。
 
-メソッド呼び出しの引数の前に `*` を置くと、可変長引数のスプラット展開となります。
+引数の前に `*` を置くと、可変長引数のスプラット展開となります。
 この値の型は `Tuple` でなければいけません。
 
 `**` を置くと名前付き引数のスプラット展開となります。
