--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -2,411 +2,271 @@
 
 この章では Crystal の構文について説明します。
 
-Crystal の構文は Ruby によく似ているため、Ruby と比較しながら説明することが多くなります。Ruby の構文については以下の資料などを参考にしてください。
+Crystal の構文を全て説明すると膨大になってしまうので、ここでは Ruby との違いに焦点を置いて解説したいと思います。
+というのも、 Crystal の構文は Ruby の影響を強く受けており、多くの場合 Ruby のように書くことで Crystal のプログラムを書くことができます。
+しかし、やはり Crystal と Ruby は別のプログラミング言語であり、構文の異なる部分もいくつか存在します。
+既に知識があるのであれば、その違いを抑えていくのが Crystal の構文を理解する手助けになるでしょう。
 
-* https://docs.ruby-lang.org/ja/latest/doc/index.html[オブジェクト指向スクリプト言語 Ruby リファレンスマニュアル]
+Rubyの構文については次のサイトを参考にしてください。
 
-また、この章の内容は Crystal 公式ドキュメントの https://crystal-lang.org/docs/syntax_and_semantics/[Syntax and Semantics] を大きく参考にしています。
+https://docs.ruby-lang.org/ja/latest/doc/index.html[オブジェクト指向スクリプト言語 Ruby リファレンスマニュアル]
 
-=== コメント
+また、Crystal の完全な構文は、公式サイトにある次のドキュメントを参考にしてください。
 
-コメントは `#` から始めます。
+https://crystal-lang.org/docs/syntax_and_semantics/[Syntax and Semantics]
+
+
+=== Crystal と Ruby の違い
+
+Crystal と Ruby は構文こそよく似ていますが、言語としては次のような大きな違いがあります。
+
+  1. Ruby はインタープリタで実行されるが、 Crystal はコンパイルして実行する。
+  2. Ruby には変数に型が無いが、 Crystal には型がある。
+
+そして、この二つが Crystal と Ruby の構文に違いをもたらしています。
+
+前者を実感する例としては、こんなものがあります。
+これは有効な Ruby のプログラムですが、 Crystal ではコンパイルエラーになります。
+
+Crystal は `require` で読み込むファイルまで含めてコンパイルしなければなりません。
+なので `require` は Ruby のようなメソッドではなく、構文として提供されていて、引数は固定の文字列ではなければいけないのです。
+
+[source,ruby]
+----
+include::./examples/example1.rb[]
+----
+
+後者を実感する例としては、こんなものがあります。
+これは Crystal のプログラムです。
+
+メソッドの引数に型を指定しているところに注目してください。
+引数の型でメソッドをオーバーロードすることができます。
+これは Ruby ではできません。
 
 [source,crystal]
 ----
-include::./examples/comment.cr[]
+include::./examples/example2.cr[]
 ----
 
-NOTE: Ruby にある `=begin` と `=end` による複数行のコメントは Crystal はサポートしていないので注意してください。
+それでは、 Crystal と Ruby で構文の異なる部分を一つ一つ説明していきます。
+
+これらの違いを意識しながら読み進めていってください。
+
+=== 型システム
+
+はじめに Crystal の型システムについて簡単に説明しておきます。
+
+Crystal の型には次のようなものがあります。
+
+  * 通常の型
+  ** `Int32` （整数）や `String` （文字列）、 `Nil` 、 `Bool` など
+  * ジェネリックス
+  ** `Array(Int32)` （要素の型が `Int32` の配列）
+  ** `Array(String)` （要素の型が `String` の配列）
+  ** `Hash(String, Int32)` （キーの型が `String` で値の型が `Int32` のハッシュ）
+  * ユニオン
+  ** `Int32 | String` （ `Int32` か `String` 型）
+  ** `Int32?` （ `Int32 | Nil` の糖衣構文）
+  * Proc
+  ** `Int32 -> String` （引数に `Int32` を受け取って `String` を返す Proc）
+
+こんなものがあるんだな、となんとなく覚えておいてください。
+
+=== `typeof`
+
+Ruby には無い構文として `typeof` というものが Crystal にはあります。
+
+これは引数の式の結果の型を返す構文です。
+引数の式はコンパイル時にのみ利用され、実行時には利用されないことに注意してください。
+
+[source,crystal]
+----
+include::./examples/typeof.cr[]
+----
 
 === リテラル
 
-Crystal にはこれらのリテラルがあります。
+リテラル関連で Ruby と大きく異なるところは、次のものが挙げられます。
 
-- `nil`
-- 論理値
-- 数値
-- シンボル
-- *文字*
-- 文字列
-- 配列
-- ハッシュ
-- 範囲
-- 正規表現
-- *タプル*
-- *名前付きタプル*
-- Proc
+  * 数値リテラルの型指定
+  * 空の配列と空のハッシュに対する型指定
+  * タプルと名前付きタプル
 
-ここではこれらを紹介していきます。
+逆に、これ以外は一部の例外を除いて Ruby と同じように書くことができます。
 
-NOTE: *文字*、*タプル*、*名前付きタプル*は Ruby には存在しないものです。
+一部の例外：
 
-==== `nil`
+  * いくつかの `%` 形式のリテラル（ `%s` や `%W` など）が存在しない。
+  * ハッシュの `{foo: bar}` のような形式は名前付きタプルの構文となっている。
+  * 正規表現の構文がPCREになっている。
 
-何も無い値を意味する `nil` というリテラルがあります。
+==== 数値リテラルの型指定
 
-これは Java の `null` や Python の `Nothing` に相当します。
+Ruby の数値は基本的には `Integer` と `Float` だけですが、Crystal の数値はその大きさや符号の有無によって `Int32` 、 `Int64` 、 `UInt32` 、 `Float32` 、 `Float64` などが存在します。
+`Int32` は 32bit の符号付き整数型で、 `UInt32` は 32bit の符号無し整数型、 `Float64` は 64bit の浮動小数点型です。
+そして、数値リテラルの末尾に `i32` 、 `i64` 、 `f32` 、 `f64` などと付けることによって、値の型を指定できます。
 
-[source,crystal]
-----
-include::./examples/nil.cr[]
-----
-
-Crystal では `nil` はかなり特殊な値で、 `nil` を含む値を便利に扱うための構文がいくつか存在します。
-
-==== 論理値
-
-論理値は `Bool` 型の値で、 `true` と `false` です。
-
-[source,crystal]
-----
-include::./examples/bool.cr[]
-----
-
-==== 数値リテラル
-
-数値リテラルも Ruby や多くの言語と同じような構文になっています。
+もちろん数値リテラルの末尾に何も指定しないことも可能で、その場合は整数なら `Int32` 型、小数なら `Float64` 型になります。
 
 [source,crystal]
 ----
 include::./examples/number.cr[]
 ----
 
-いくつか特殊な点があるとすれば、数値リテラルの区切りに `_` を使えるところと、 `i64` や `f32` などの接尾辞を付けることで数値リテラルの型を明示できるところがあります。
+==== 空の配列と空のハッシュに対する型指定
 
-例えば、 `100i64` は `Int64` 型（64ビットの符号付き整数型）の `100` になります。
-同様に `100u64` は `UInt64` 型（64ビットの符号なし整数型）の `100` になります。
-
-末尾に何も付いていない場合、整数リテラルなら `Int32` 型、小数点や指数があれば `Float64` 型になります。
-
-.数値リテラルの接尾辞の種類
-[cols="2*1,3",options=header,width=70%]
-|===
-|接尾辞|型|説明
-
-| `i8`   | `Int8`   | 8ビットの符号付き整数型
-| `i16`  | `Int16`  | 16ビットの符号付き整数型
-| `i32`  | `Int32`  | 32ビットの符号付き整数型
-| `i64`  | `Int64`  | 64ビットの符号付き整数型
-| `i128` | `Int128` | 128ビットの符号付き整数型
-
-| `u8`   | `UInt8`   | 8ビットの符号なし整数型
-| `u16`  | `UInt16`  | 16ビットの符号なし整数型
-| `u32`  | `UInt32`  | 32ビットの符号なし整数型
-| `u64`  | `UInt64`  | 64ビットの符号なし整数型
-| `u128` | `UInt128` | 128ビットの符号なし整数型
-
-| `f32` | `Float32` | 32ビットの浮動小数点型
-| `f64` | `Float64` | 64ビットの浮動小数点型
-|===
-
-==== シンボル
-
-シンボルは変更できない文字列のようなもので、Ruby と大体同じ構文です。
-
-`:` から始まる単語はシンボルになります。
-
-NOTE: Crystal では Ruby ほどシンボルを使いません。なぜならば `String#intern` や `String#to_symbol` などのメソッドが無く、プログラム中で動的にシンボルを生成することが不可能だからです。また、シンボルリテラルの中に `#{}` を含めて実行時にシンボルの値を決めることもできません。
+空の配列は `[]` 、空のハッシュは `{}` のように書けますが、これだと要素やキーの型が分からないためコンパイルすることができません。
+そこで Crystal では、空のリテラルのあとに `of 型` と続けることで型を指定します。
+ハッシュの場合は `of キーの型 => 値の型` になります。
 
 [source,crystal]
 ----
-include::./examples/symbol.cr[]
+include::./examples/empty.cr[]
 ----
 
-NOTE: Crystal は Ruby にある `%s` 形式のシンボルリテラルをサポートしていません。
+==== タプルと名前付きタプル
 
-==== 文字と文字列
-
-NOTE: Crystal は型のある言語なので、Ruby とは異なり文字と文字列を区別します。
-
-文字リテラルは `'` で囲まれた文字です。
-
-[source,crystal]
-----
-include::./examples/char.cr[]
-----
-
-当然ですが、文字リテラルなので `'` の中に二文字以上の文字を含むと構文エラーになります。
-
-文字列リテラルは `"` で囲む形式や `%` から始まる形式、ヒアドキュメントという3つの形式が存在します。
-
-[source,crystal]
-----
-include::./examples/string.cr[]
-----
-
-==== 配列
-
-配列も Ruby と同じように `[` と `]` の中に `,` で要素を区切って配置します。
-
-文字列の配列には `%w` から始まる形式が利用できます。
-
-[source,crystal]
-----
-include::./examples/array.cr[]
-----
-
-Ruby と大きく異なるのは空の配列を作る際に、`of` に続けて型を明記しなければいけないところです。
-現在の型推論では空の配列がどんな型の要素を持つか正しく推論できないためです。
-同じような制約が Hash にもあります。
-
-[source,crystal]
-----
-include::./examples/empty-array.cr[]
-----
-
-また、一度作った配列の型は後から変更できません。
-つまり、数値の配列に文字列を追加したら数値と文字列の配列になる、といったことは無く、コンパイル時にエラーになります。
-
-[source,crystal]
-----
-include::./examples/push-array.cr[]
-----
-
-==== ハッシュ
-
-ハッシュも Ruby と同じように `{` と `}` の中に `=>` の左右にキーとバリューを置いたものを `,` で区切って配置します。
-
-Ruby にある `:` で区切るとキーがシンボルになる形式は Crystal では名前付きタプルになるので使えません。
-
-[source,crystal]
-----
-include::./examples/hash.cr[]
-----
-
-==== 範囲
-
-範囲も Ruby と同じで、 `..` か `\...` の左右に範囲の始まりと終わりの値を置きます。
-
-`..` と `\...` の違いは、 `..` は終わりの値を含んで、 `\...` は終わりの値を含まないところです。
-
-[source,crystal]
-----
-include::./examples/range.cr[]
-----
-
-==== 正規表現
-
-正規表現も Ruby と同じで `/` で囲みます。
-
-また `%r` から始まる形式も利用できます。
-
-[source,crystal]
-----
-include::./examples/regex.cr[]
-----
-
-NOTE: Ruby では正規表現のクラスは `Regexp` ですが、Crystal では `Regex` です。
-
-NOTE: Ruby の正規表現エンジンは Onigmo ですが、 Crystal は PCRE です。なので、使える構文に差異があることに注意してください。
-
-// Onigmo と PCRE の違いについて触れる。
-
-==== タプル、名前付きタプル
-
-タプルと名前付きタプルは Ruby には無い概念です。
-
-タプルは配列のようなものですが、大きさが固定で変更できません。
-配列の構文を `[]` を使うところを `{}` に変えたような構文になります。
-
-名前付きタプルはハッシュのようなものですが、キーにシンボル以外取れず、大きさが固定で変更できません。
-ハッシュの構文にある `=>` を `:` に変えたような構文になります。
-
-タプルはスプラット展開してメソッドの引数に渡す際に使います。
-名前付きタプルはスプラット展開してメソッドの名前付き引数に渡す際に使います。
-
-[source,crystal]
-----
-include::./examples/tuple.cr[]
-----
-
-==== Proc
-
-`Proc` も Ruby と同じように `\->` で作れますが、引数の型を明示しなければいけません。
-
-[source,crystal]
-----
-include::./examples/proc.cr[]
-----
-
-Crystal では Ruby ほど `Proc` を使いません。
+これは可変長引数、名前付き引数と関連の深い概念なので、そこで説明します。
 
 === 変数
 
-変数は `=` で代入できて、その名前で参照できます。
+変数名は小文字から始めなければならず、定数は大文字から始めねけらばいけません。
+インスタンス変数は `@` から、クラス変数は `@@` から始めなければいけません。
+これらは Ruby と同様です。
 
-また、複数代入もできます。
+しかし Crystal にグローバル変数はありません。
+代わりにクラス変数や定数を使ってください。
 
-[source,crystal]
-----
-include::./examples/variable.cr[]
-----
+=== クラス・メソッド
 
-=== 定数
+クラス・メソッド関連で Ruby と大きく異なるところは、次のものが挙げられます。
 
-定数も `=` で定義できます。
-定数の名前は大文字でなければいけません。
+  * メソッドの型指定・オーバーロード・ `previous_def`
+  * 名前付き引数
+  * 可変長引数の扱い
+  * インスタンス変数の型
+  * `struct`
 
-[source,crystal]
-----
-include::./examples/constant.cr[tag=file]
-----
+また、 Crystal ではコンパイル時に全てのメソッドが定義されていなければいけません。
+なので Ruby の `define_method` のようなことはできません。
 
-=== 条件分岐と繰り返し構文
+==== メソッドの型指定・オーバーロード・ `previous_def`
 
-Crystal にも Ruby とほぼ同等の条件分岐・繰り返しの構文があり、大体同じように使えます。
+メソッドの型指定・オーバーロードは前述しましたが、異なる引数の型の同名のメソッドを定義すると、呼び出し時に適切なものが選択される、という機能です。
 
-==== 条件分岐の構文
+また、このときに引数の型が一致するメソッドが見つからなかった場合、コンパイルエラーになります。
 
-- `if`、`elsif`、`else`
-- `unless`
-- `case`、`when`
-- 三項演算子
+`previous_def` は反対に、一致するメソッドが複数見つかってしまった場合のための機能です。
+この場合は、まず一番最後に定義されたものが呼び出されます。
+そして、その中で `previous_def` を使うと、次に定義されたものが呼び出されるのです。
 
-`case` 構文では内部的には Ruby と同じように `===` 演算子を使います。
-
-[source,crystal]
-----
-include::./examples/conditional.cr[]
-----
-
-==== 繰り返しの構文
-
-- `while`
-- `until`
-
-NOTE: Crystal には後置 `while` ・後置 `until` はありません。
+ちなみに、引数の型は指定しないこともできます。
+その場合は任意の型を受け取ることになります。
+ですが、実際に呼び出された引数が持っていないメソッドを呼び出していた場合は、コンパイルエラーになります。
 
 [source,crystal]
 ----
-include::./examples/repeat.cr[]
+include::./examples/previous_def.cr[tag=file]
 ----
 
-=== `require`
+==== 名前付き引数
 
-Crystal では `require` はメソッドではなく構文です。
+名前付き引数とは、 Ruby ではキーワード引数と呼ばれるものです。
 
-別のファイルを読み込み、定義などを取り入れます。
+Crystal では、全ての引数を名前付き引数として呼び出すことができます。
 
-`./` から始まるパスは、そのファイルからの相対パスを意味して、そうでないパスはライブラリのパスを意味します。
-
-`**` で終わるパスはディレクトリを再帰的に読んで Crystal のファイルを読み込み、 `*` で終わるパスの場合はそのディレクトリにある Crystal のファイルを全て読み込みます。
-
-パスがディレクトリ名の場合、ディレクトリにある同名のファイルを読み込みます。
-例えば `./foo` と `foo` ディレクトリを読んだ場合、 `foo/foo.cr` を読み込みます。
+他にも、名前付き引数として指定するための名前と、実際に引数として受け取る変数の名前を分けることができます。
+これは、名前付き引数の名前として予約語を使いたいときに便利です。
 
 [source,crystal]
 ----
-include::./examples/require.cr[]
+include::./examples/named_arg.cr[tag=file]
 ----
 
-[suppress='InvalidSymbol']
-==== 型制限
+==== 可変長引数
 
-これらの条件部分に単純に変数を渡して `nil` かどうか確かめたり、 `is_a?` を使って変数の型を確かめたりすると、それによって変数の型が制限されます。
+Ruby 同様、引数名の前に `*` を置くと可変長引数を受け取るものとして、 `**` を置くと名前付き引数の余った引数を受け取るものとしてマークされます。
+
+しかし、 Ruby では可変長引数は配列を、キーワード引数の余りはハッシュを受け取りますが、 Crystal では可変長引数ではタプルに、名前付き引数の余りは名前付きタプルになります。
+
+タプルは固定長で変更不可の配列のようなもので、それぞれの要素の型を保持できます。
+また、名前付きタプルとタプル同様の特性を持ったキーがシンボルのハッシュのようなものです。
+
+スプラット展開の際にも、これらを渡します。
 
 [source,crystal]
 ----
-include::./examples/restriction.cr[]
+include::./examples/vararg.cr[tag=file]
 ----
 
-=== 型とメソッド
+==== インスタンス変数の型
 
-==== クラス・メソッドの定義
+Crystal ではインスタンス変数・クラス変数の型がコンパイル時に決定できなければいけません。
+
+`initialize` メソッドの中でインスタンス変数に代入している場合などは気を利かせて型を推論してくれます。
+しかし、そうでない場合は型が分からずにコンパイルエラーになることがあります。
+その場合は明示的にインスタンス変数の型を指定してください。
+
+また、メソッドの引数名としてインスタンス変数を指定すると、メソッドの呼び出しと同時に、そのインスタンス変数に代入することができます。
+
+// TODO: 例
+
+==== `struct`
+
+`class` とよく似たものとして `struct` があります。
+
+`struct` も `class` とほぼ同等の機能を持っていますが、メモリ確保に違いがあります。
+`class` で定義した型のインスタンスはヒープに置かれますが、 `struct` はスタックに置かれます。
+このため `struct` の方が高速にインスタンスを作ることができます。
+
+しかし、 `struct` は自分自身をインスタンス変数に持つことができないという制約があります。
+
+=== `enum`
+
+Crystal には `enum` があります。
+これは連番の数値型に分かりやすい名前を付けたもので、さらにメソッドを定義することもできます。
+
+また、 `@[Flags]` 属性を付けると、単なる連番ではなく値はビットフラグになります。
+
+// TODO: 例
+
+=== メソッド呼び出し
+
+メソッド呼び出しの構文はほとんど Ruby と同じですが、一つだけ異なる点があります。
+
+Crystal には一引数のブロックの省略記法というものがあります。
+これは ブロックの最初の引数に対してメソッドを呼び出す場合に `&.メソッド名` のように書けるという構文です。
+さらに、そこからメソッドチェインを始めることができるため、場合によっては非常に便利です。
 
 [source,crystal]
 ----
-include::./examples/class.cr[tag=file]
+include::./examples/call.cr[tag=file]
 ----
 
-クラスは `class` キーワードで定義します。
-クラス名は大文字から始めなければいけません。
-定義した `class` は `new` クラスメソッドでインスタンス化できます。
-継承は Ruby と同様に `<` で出来ます。
+=== 条件分岐・繰り返し
 
-メソッドは `def` キーワードで定義します。
-メソッド名は大文字からは始められません。
-返り値は最後に実行した式の値になります。
+条件分岐・繰り返しの構文は Ruby とほとんど同じです。
+ただし `redo` はありません。
 
-==== `initialize`・インスタンス変数
+条件分岐の条件に変数が対象になっている場合、その変数の型がフィルターされます。
 
-コンストラクタは `initialize` メソッドで定義できます。
-
-`@` から始まる変数はインスタンス変数になります。
-メソッドの引数にインスタンス変数を指定すると、そのメソッドの呼び出しと共にインスタンス変数に代入されます。
-インスタンス変数の型はコンパイル時に決定できるようになっていなければなりません。
+例えば、次のコードを考えてみましょう。
 
 [source,crystal]
 ----
-include::./examples/initialize.cr[tag=file]
+foo = rand > 0.5 ? "foo" : nil
+
+# <1>
+if foo
+  # <2>
+else
+  # <3>
+end
 ----
+<1> `foo` の型は `String | Nil`
+<2> この位置に来たら `foo` は確実に `String` 型
+<3> この位置に来たら `foo` は確実に `Nil` 型
 
-==== `protected`、`private`
+ということが分かると思います。
 
-`def` の前に `protected`、`private` を置くとメソッドの可視性を変更できます。
-
-  - `private` の場合、メソッドはレシーバーの無い形式でしか呼び出せません。
-  - `protected` の場合、メソッドは自身か継承先のクラスの中でしか呼び出せません。
-
-トップレベルのメソッドに対しては `private` が指定できます。この場合、そのファイルでのみ参照できるメソッドになります。
-
-また、クラス内の定数にも `private` を指定することができて、その場合は `::` を使った参照ができなくなります。
-
-==== デフォルト引数・型制限・オーバーロード
-
-デフォルト引数は、引数に続いて `=` で指定します。
-
-引数に続いて `:` のあとに型を指定すると、引数がその型で制限されます。
-型の制限された引数のあるメソッドを、その型以外で呼ぼうとするとコンパイル時にエラーになります。
-
-異なる引数の数、型制限で同名のメソッドを定義した場合、実行時に適切な型のものが選択されて呼び出されます。
-
-また引数の前に、引数名と `:` を置くと、名前付き引数となります。
-この場合、その引数は順序に関係なくその名前の引数としてメソッドに渡されます。
-
-[source,crystal]
-----
-include::./examples/default.cr[tag=file]
-----
-
-==== 可変長引数・ブロック
-
-引数名の前に `*` を置いた場合、そのメソッドは可変長の引数を取ります。
-`**` を置いた場合は、名前付き引数の可変長引数です。
-
-`&` はブロックを受け取ります。このブロックは `Proc` 型です。
-
-メソッドの中で `yield` を使うと、ブロックを呼び出すことができます。
-このとき、引数を渡すこともできます。
-
-メソッド呼び出しのあとに、`do` か `{` を置くと、そこから `end`、`}` までがブロックとしてメソッドに渡されます。
-
-引数の前に `*` を置くと、可変長引数のスプラット展開となります。
-この値の型は `Tuple` でなければいけません。
-
-`**` を置くと名前付き引数のスプラット展開となります。
-この値の型は `NamedTuple` でなければいけません。
-
-`&` は Ruby 同様ブロック引数を渡すのにも使えますが、ブロックの第一引数としてメソッドチェインの開始点としても使えます。
-
-==== `alias`
-
-`alias` 文を使って型の別名を定義できます。
-
-[source,crystal]
-----
-include::./examples/alias.cr[tag=file]
-----
-
-=== 例外処理
-
-`begin`、`rescue`、`else`、`ensure` で例外処理ができます。
-
-`rescue` は指定した型の例外が投げられたときに実行される部分です。 `else` は `begin` 内で例外が投げられなかった場合に実行される部分、 `ensure` は例外が投げられても投げられなくても実行される部分です。
-
-また、`do` ブロックとメソッドの本体に対しては `begin` を省略して `rescue` 、 `else`、 `ensure` が書けます。
-
-[source,crystal]
-----
-include::./examples/exception.cr[]
-----
+このように、条件分岐の条件によって、ブロック内で変数の型がいい感じに変化するのです。
