--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -270,3 +270,33 @@ end
 ということが分かると思います。
 
 このように、条件分岐の条件によって、ブロック内で変数の型がいい感じに変化するのです。
+
+型のフィルタに使える特殊な構文には次のものがあります。
+
+  * `is_a?`: `foo.is_a?(String)` は変数 `foo` が `String` 型のとき `true` になる。
+  * `nil?`: `is_a?(Nil)` の省略形
+  * `responds_to?`: `foo.responds_to?(:size)` は変数 `foo` がメソッド `size` を持っているときに `true` になる。
+
+また、これらを `&&` や `||` や `!` で組み合わせたものも動作します。
+
+// TODO: 例
+
+=== まとめ
+
+説明しなかった構文はいくつもありますが、この辺りの構文を覚えておけば Crystal のソースコードがそれなりに読めるようになるはずです。
+
+説明しなかったのは、
+
+  * ジェネリックスの構文
+  * `uninitialized`
+  * C言語と連携のための構文
+  * マクロ
+
+などです。
+
+ちなみに、マクロについては次の章で詳しく解説されるはずです。
+
+また、分からない構文があったら最初に挙げた Crystal のドキュメントを確認してみるといいでしょう。
+大体書いてあるはずです。
+
+https://crystal-lang.org/docs/syntax_and_semantics/[Syntax and Semantics]
