--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -7,7 +7,7 @@ Crystal の構文を全て説明すると膨大になってしまうので、こ
 しかし、やはり Crystal と Ruby は別のプログラミング言語であり、構文の異なる部分もいくつか存在します。
 既に知識があるのであれば、その違いを抑えていくのが Crystal の構文を理解する手助けになるでしょう。
 
-Rubyの構文については次のサイトを参考にしてください。
+Ruby の構文については次のサイトを参考にしてください。
 
 https://docs.ruby-lang.org/ja/latest/doc/index.html[オブジェクト指向スクリプト言語 Ruby リファレンスマニュアル]
 
@@ -23,7 +23,7 @@ Crystal と Ruby は構文こそよく似ていますが、言語としては次
   1. Ruby はインタープリタで実行されるが、 Crystal はコンパイルして実行する。
   2. Ruby には変数に型が無いが、 Crystal には型がある。
 
-そして、この二つが Crystal と Ruby の構文に違いをもたらしています。
+そして、この2が Crystal と Ruby の構文に違いをもたらしています。
 
 前者を実感する例としては、こんなものがあります。
 これは有効な Ruby のプログラムですが、 Crystal ではコンパイルエラーになります。
@@ -48,7 +48,7 @@ include::./examples/example1.rb[]
 include::./examples/example2.cr[]
 ----
 
-それでは、 Crystal と Ruby で構文の異なる部分を一つ一つ説明していきます。
+それでは、 Crystal と Ruby で構文の異なる部分を説明していきます。
 
 これらの違いを意識しながら読み進めていってください。
 
@@ -76,7 +76,7 @@ Crystal の型には次のようなものがあります。
 
 Ruby には無い構文として `typeof` というものが Crystal にはあります。
 
-これは引数の式の結果の型を返す構文です。
+これは引数として与えられた式の結果についた型を返す構文です。
 引数の式はコンパイル時にのみ利用され、実行時には利用されないことに注意してください。
 
 [source,crystal]
@@ -100,11 +100,13 @@ include::./examples/typeof.cr[]
   * ハッシュの `{foo: bar}` のような形式は名前付きタプルの構文となっている。
   * 正規表現の構文がPCREになっている。
 
+[suppress=LongKanjiChain]
 ==== 数値リテラルの型指定
 
-Ruby の数値は基本的には `Integer` と `Float` だけですが、Crystal の数値はその大きさや符号の有無によって `Int32` 、 `Int64` 、 `UInt32` 、 `Float32` 、 `Float64` などが存在します。
-`Int32` は 32bit の符号付き整数型で、 `UInt32` は 32bit の符号無し整数型、 `Float64` は 64bit の浮動小数点型です。
-そして、数値リテラルの末尾に `i32` 、 `i64` 、 `f32` 、 `f64` などと付けることによって、値の型を指定できます。
+Ruby の数値は基本的には `Integer` と `Float` だけです。
+しかし、Crystal の数値はその大きさや符号の有無によって `Int32` ・ `Int64` ・ `UInt32` ・ `Float32` ・ `Float64` などが存在します。
+`Int32` は32ビットの符号付き整数型で、 `UInt32` は32ビットの符号無し整数型、 `Float64` は64ビットの浮動小数点型です。
+そして、数値リテラルの末尾に `i32` ・ `i64` ・ `f32` ・ `f64` などと付けることによって、値の型を指定できます。
 
 もちろん数値リテラルの末尾に何も指定しないことも可能で、その場合は整数なら `Int32` 型、小数なら `Float64` 型になります。
 
@@ -116,7 +118,7 @@ include::./examples/number.cr[]
 ==== 空の配列と空のハッシュに対する型指定
 
 空の配列は `[]` 、空のハッシュは `{}` のように書けますが、これだと要素やキーの型が分からないためコンパイルすることができません。
-そこで Crystal では、空のリテラルのあとに `of 型` と続けることで型を指定します。
+そこで Crystal では、空のリテラルに `of 型` と続けることで型を指定します。
 ハッシュの場合は `of キーの型 => 値の型` になります。
 
 [source,crystal]
@@ -152,11 +154,11 @@ include::./examples/empty.cr[]
 
 ==== メソッドの型指定・オーバーロード・ `previous_def`
 
-メソッドの型指定・オーバーロードは前述しましたが、異なる引数の型の同名のメソッドを定義すると、呼び出し時に適切なものが選択される、という機能です。
+メソッドの型指定・オーバーロードは前述しましたが、異なる引数の型を持った同名のメソッドを定義すると、呼び出し時に適切なものが選択される、という機能です。
 
 また、このときに引数の型が一致するメソッドが見つからなかった場合、コンパイルエラーになります。
 
-`previous_def` は反対に、一致するメソッドが複数見つかってしまった場合のための機能です。
+`previous_def` は反対に、一致するメソッドが複数見つかってしまった場合に使う機能です。
 この場合は、まず一番最後に定義されたものが呼び出されます。
 そして、その中で `previous_def` を使うと、次に定義されたものが呼び出されるのです。
 
@@ -187,10 +189,11 @@ include::./examples/named_arg.cr[tag=file]
 
 Ruby 同様、引数名の前に `*` を置くと可変長引数を受け取るものとして、 `**` を置くと名前付き引数の余った引数を受け取るものとしてマークされます。
 
-しかし、 Ruby では可変長引数は配列を、キーワード引数の余りはハッシュを受け取りますが、 Crystal では可変長引数ではタプルに、名前付き引数の余りは名前付きタプルになります。
+Ruby では可変長引数は配列を、キーワード引数の余りはハッシュを受け取ります。
+ですが、 Crystal では可変長引数ではタプルに、名前付き引数の余りは名前付きタプルになります。
 
-タプルは固定長で変更不可の配列のようなもので、それぞれの要素の型を保持できます。
-また、名前付きタプルとタプル同様の特性を持ったキーがシンボルのハッシュのようなものです。
+タプルは固定長で変更不可の配列に似たもので、各要素の型を保持できます。
+また、名前付きタプルとタプル同様の特性を持ったキーがシンボルのハッシュに似たものです。
 
 スプラット展開の際にも、これらを渡します。
 
@@ -232,23 +235,24 @@ Crystal には `enum` があります。
 
 === メソッド呼び出し
 
-メソッド呼び出しの構文はほとんど Ruby と同じですが、一つだけ異なる点があります。
+メソッド呼び出しの構文はほとんど Ruby と同じですが、1つだけ異なる点があります。
 
-Crystal には一引数のブロックの省略記法というものがあります。
-これは ブロックの最初の引数に対してメソッドを呼び出す場合に `&.メソッド名` のように書けるという構文です。
-さらに、そこからメソッドチェインを始めることができるため、場合によっては非常に便利です。
+Crystal には一引数ブロックの省略記法というものがあります。
+これは ブロックの第一引数に対してメソッドを呼び出す場合に `&.メソッド名` のように書けるという構文です。
+さらに、そこからメソッドチェインを始めることができるため、場合によってはとても便利です。
 
 [source,crystal]
 ----
 include::./examples/call.cr[tag=file]
 ----
 
+[suppress=InvalidSymbol]
 === 条件分岐・繰り返し
 
 条件分岐・繰り返しの構文は Ruby とほとんど同じです。
 ただし `redo` はありません。
 
-条件分岐の条件に変数が対象になっている場合、その変数の型がフィルターされます。
+条件分岐の条件に変数が対象になっている場合、その変数の型がフィルタされます。
 
 例えば、次のコードを考えてみましょう。
 
@@ -296,7 +300,7 @@ end
 
 ちなみに、マクロについては次の章で詳しく解説されるはずです。
 
-また、分からない構文があったら最初に挙げた Crystal のドキュメントを確認してみるといいでしょう。
+また、分からない構文はあれば最初に挙げた Crystal のドキュメントを確認してみるといいでしょう。
 大体書いてあるはずです。
 
 https://crystal-lang.org/docs/syntax_and_semantics/[Syntax and Semantics]
