--- a/07-web-development/content.adoc
+++ b/07-web-development/content.adoc
@@ -2,7 +2,7 @@
 
 
 この章では、 Crystal を用いて Web 開発を行う方法について解説します。 +
-本サンプルで使用する Crystal のバージョンは `0.24.2` で確認しています。
+本サンプルで使用する Crystal のバージョンは `0.26.0` で確認しています。
 
 === Crystal での Web 開発の前提知識
 
@@ -104,12 +104,12 @@ Ruby でいうところの Sinatra に似た設計思想で作られており、
 * Amber https://www.amberframework.org
 
 フルスタックの Web フレームワークです。 +
-様々なコードジェネレータや、 O/RM を備えています。 Rails 的な規約重視のフレームワークです。 +
+様々なコードジェネレータや、 OR/M を備えています。 Rails 的な規約重視のフレームワークです。 +
 
 === Kemal による Web 開発
 
 それでは本章から Kemal による Web 開発を、サンプルを交えながら説明します。
-また本サンプルに使用する Kemal のバージョンは `0.22.0` を想定しています。
+また本サンプルに使用する Kemal のバージョンは `0.24.0` を想定しています。
 
 ==== Kemal インストール
 
