--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -187,7 +187,7 @@ include::./examples/named_arg.cr[tag=file]
 
 ==== 可変長引数
 
-Ruby 同様、引数名の前に `*` を置くと可変長引数を受け取るものとして、 `**` を置くと名前付き引数の余った引数を受け取るものとしてマークされます。
+Ruby 同様、引数名の前に `\*` を置くと可変長引数を受け取るものとして、 `**` を置くと名前付き引数の余った引数を受け取るものとしてマークされます。
 
 Ruby では可変長引数は配列を、キーワード引数の余りはハッシュを受け取ります。
 ですが、 Crystal では可変長引数ではタプルに、名前付き引数の余りは名前付きタプルになります。
