各章の最初に著者のGitHubアカウント名を追加

--- a/05-shards/content.adoc
+++ b/05-shards/content.adoc
@@ -1,5 +1,7 @@
 == Shards
 
+著者: arcage
+
 Ruby に RubyGems があるように、Crystal にも Shards というパケージ管理の仕組みが存在しています。Shards は Crystal 標準のパッケージマネージャとして採用されており、Shards 関連の操作に使用する `shards` コマンドも Crystal コンパイラに同梱されています。ですので、Shards を利用するための特別な準備は必要ありません。
 
 Shards における個々のパッケージは shard （シャード）と呼ばれ、これは鉱物などの「欠片」や「破片」といった意味の単語です。Ruby や Python といった先行する言語と比べると充分とは言えないかもしれませんが、それでも GitHub などを利用して 2000 を超える shard が公開されています。
