--- a/index.adoc
+++ b/index.adoc
@@ -20,7 +20,7 @@ include::./04-macro/content.adoc[]
 
 include::./05-shards/content.adoc[]
 
-// include::./06-tools/content.adoc[]
+include::./06-crystal-command/content.adoc[]
 
 include::./07-web-development/content.adoc[]
 
