02で構成が不自然だったところを修正

--- a/02-getting-started/content.adoc
+++ b/02-getting-started/content.adoc
@@ -8,9 +8,9 @@
 
 そして、プログラムを書くために大事なエディタのサポート状況についても紹介します。
 
-=== Linux へのインストール
+=== Crystal のインストール
 
-Linux へのインストール方法はディストリビューションごとに異なります。ここでは、主要なディストリビューションでのインストール方法を紹介します。
+Crystal のインストール方法は OS ごとに異なります。ここでは、主要な Linux ディストリビューションや macOS 、そして Windows へのインストール方法を紹介します。
 
 ==== Debian や Ubuntu
 
