--- a/05-shards/content.adoc
+++ b/05-shards/content.adoc
@@ -26,8 +26,8 @@ RubyGems と Shards の大きな違いは、パッケージのインストール
 
 プロジェクト名は、shard として公開するのであればいくつかルール（後述）もありますが、そうでない場合にはそこまで深く考える必要はありません。今回はシンプル（simple）な HTML を返すアプリなので `simple_html` というプロジェクト名にすることにします。
 
-.● sinple_html コマンド利用イメージ
-
+[source,console]
+.`simple_html` コマンド利用イメージ
 ----
 $ simple_html "Page Title" "Page body."
 <html><head><title>Page Title</title></head><body><h1>Page Title</h1><p>Page body.</p></body></html>
@@ -39,13 +39,13 @@ $ simple_html "Page Title" "Page body."
 
 `crystal init` コマンドを実行する際には、プロジェクトの種類（`app` もしくは `lib`）とプロジェクト名を指定します。例えば、`simple_html` をアプリケーションとして実装する場合のひな形生成コマンドは `crystal init app simple_html` です。このコマンドを実行するとカレントディレクトリの直下にプロジェクト名と同じ名前の simple_html ディレクトリができ、その中に各種ひな型が自動生成されます。
 
-.● simple_html アプリケーション用プロジェクトのひな形生成コマンド
-
+[source,console]
+.`simple_html` アプリケーション用プロジェクトのひな形生成コマンド
 ----
 $ crystal init app simple_html
 ----
 
-.● プロジェクトひな形として生成されるファイル/ディレクトリ
+.プロジェクトひな形として生成されるファイル/ディレクトリ
 
 `.git/`（ディレクトリ）:: このプロジェクト用の初期化済み git リポジトリ。
 
