注記をNOTEで囲った

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -96,11 +96,14 @@ include::./examples/typeof.cr[]
 
 逆に、これ以外は一部の例外を除いて Ruby と同じように書くことができます。
 
-一部の例外：
+[NOTE]
+====
+一部の例外としては次のものが挙げられます。
 
   * いくつかの `%` 形式のリテラル（ `%s` や `%W` など）が存在しない。
   * ハッシュの `{foo: bar}` のような形式は名前付きタプルの構文となっている。
   * 正規表現の構文がPCREになっている。
+====
 
 [suppress=LongKanjiChain]
 ==== 数値リテラルの型指定
