スプラット展開をsplat展開で統一

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -209,8 +209,8 @@ Ruby では可変長引数は配列を、キーワード引数の余りはハッ
 タプルは配列に似ていますが、固定長・変更不可であり、各要素の型を保持しているのが特徴です。
 また名前付きタプルもキーがシンボルのハッシュに似た型で、タプルと同様に変更不可で各シンボルのキーに対応する型を保持しているのが特徴です。
 
-スプラット展開の際にも、これらを渡します。
-スプラット展開も Ruby と同様の構文で、メソッド呼び出しで引数の前に `\*` を置いたものが可変長引数のスプラット展開になって、引数の前に `**` を置いたものが名前付き引数のスプラット展開になります。
+splat 展開の際にも、これらを渡します。
+splat 展開も Ruby と同様の構文で、メソッド呼び出しで引数の前に `\*` を置いたものが可変長引数の splat 展開になって、引数の前に `**` を置いたものが名前付き引数の splat 展開になります。
 
 実際に可変長引数を受け取るメソッドの例です。
 
