Redpenを黙らせた

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -210,7 +210,7 @@ Ruby では可変長引数は配列を、キーワード引数の余りはハッ
 また名前付きタプルもキーがシンボルのハッシュに似た型で、タプルと同様に変更不可で各シンボルのキーに対応する型を保持しているのが特徴です。
 
 splat 展開の際にも、これらを渡します。
-splat 展開も Ruby と同様の構文で、メソッド呼び出しで引数の前に `\*` を置いたものが可変長引数の splat 展開になって、引数の前に `**` を置いたものが名前付き引数の splat 展開になります。
+splat 展開も Ruby と同様の構文で、メソッド呼び出しで引数の前に `\*` を置いたものが可変長引数の splat 展開となります。また、引数の前に `**` を置いたものは名前付き引数の splat 展開になります。
 
 実際に可変長引数を受け取るメソッドの例です。
 
